# ROS-Food-Tracker

./: .gitignore  CMakeLists.txt  README.md  Stuff needed for project 2
config/: nav2_params.yaml
include/turtlebot3_gazebo/: CArUcoDetector.hpp  CDriveLogic.hpp  CImageProcessor.hpp  CItem.hpp  CStockInterface.hpp  CStockList.hpp  CStockTaker.hpp
launch/: Enclosed_Maze_1.launch.py  explore.launch.py  turtlebot3_bringup.launch.py
maze_models/Enclosed_Maze_2/: model.config  model.sdf
maze_models/Floating_room_1/: model.config  model.sdf
maze_models/Floating_room_2/: model.config  model.sdf
maze_models/open_maze_1/: model.config  model.sdf
maze_models/open_maze_2/: model.config  model.sdf
maze_models/open_maze_3/: model.config  model.sdf
models/Enclosed_Maze_1/: model.config  model.sdf
models/turtlebot3_burger/: model.config  model.sdf
msg/: AprilTag.msg
src/: CArUcoDetector.cpp  CDriveLogic.cpp  CImageProcessor.cpp  CItem.cpp  CStockInterface.cpp  CStockList.cpp
test/: CMakeLists.txt  test_image_processor.cpp  tests.cpp
turtlebot3_burger/: model.sdf
worlds/: Enclosed_Maze_1.world
